--- a/index.html
+++ b/index.html
@@ -15,79 +15,73 @@
     <div style="margin: auto;max-width: 650px;border: 1px solid black;">
       <div>
         <header>
-          <div>
+          <div style="background-color: #E05945;">
             <img
               src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailler5images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B2_edited.jpg?raw=true"
-              alt="..." width="100%" />
+              alt="..." width="100%" style="image-rendering: -webkit-optimize-contrast;"/>
           </div>
           <div style="margin-top: -4px;">
             <div>
               <a href="https://www.kgkrealty.com/project/jaipur/#on_go_proj" target="_blank">
                 <img
                   src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited2.jpg?raw=true"
-                  alt=".." width="100%">
+                  alt="..." width="100%" style="image-rendering: -webkit-optimize-contrast;">
               </a>
             </div>
         </header>
-        <div class="content pb-4" style="background-color: #E9E9E9;margin-top: -4px;">
-          <div class="site-plans" style="max-width: 750px;margin: 0 auto;display: flex;flex-wrap: wrap;justify-content: center;">
-
-            <div style="
-    width: 50%;
-">
+        <div style="background-color: #E9E9E9;margin-top: -4px;">
+          <div style="margin: 0 auto;">
+            <div style="display: flex;">
               <a href="https://kgkrealty.com/jaipurproperty/infitihomespro/" target="_blank">
-                <img src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited3.jpg?raw=true" alt="" width="100%">
+                <img
+                  src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited3.jpg?raw=true"
+                  alt="..." style="image-rendering: -webkit-optimize-contrast;" width="100%">
               </a>
-            </div>
-            <div style="
-    width: 50%;
-">
               <a href="https://kgkrealty.com/jaipurproperty/amulyaprop/" target="_blank">
-                <img src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited4.jpg?raw=true" alt="" width="100%">
-              </a>
+                <img
+                  src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited4.jpg?raw=true"
+                  alt="..." style="image-rendering: -webkit-optimize-contrast;" width="100%">
             </div>
-            <div style="
-    width: 50%;
-">
+            </div>
+            <div style="display: flex;">
               <a href="https://www.kgkrealty.com/" target="_blank">
-                <img src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited5.jpg?raw=true" alt="" width="100%">
+                <img
+                  src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited5.jpg?raw=true"
+                  alt="..." style="image-rendering: -webkit-optimize-contrast;" width="100%">
               </a>
-            </div>
-            <div style="
-    width: 50%;
-">
               <a href="https://kgkrealty.com/jaipurproperty/navnilaypro/" target="_blank">
-                <img src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited6.jpg?raw=true" alt="" width="100%">
+                <img
+                  src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited6.jpg?raw=true"
+                  alt="..." style="image-rendering: -webkit-optimize-contrast;" width="100%">
               </a>
             </div>
-            <div style="
-    width: 50%;
-">
+            <div style="text-align: center;">
               <a href="https://www.kgkrealty.com/project/jaipur/lehariya/" target="_blank">
-                <img src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited7.jpg?raw=true" alt="" width="100%">
+                <img
+                  src="https://github.com/himanshu1998-coder/kgkrealtymailerimages/blob/main/kgkmailer4images/KGK%20Corp%20Mailer%20003%20(9-6-2021)%20B1_edited7.jpg?raw=true"
+                  alt="..." style="image-rendering: -webkit-optimize-contrast;" width="50%">
               </a>
             </div>
           </div>
-        </div>
       </div>
       <footer style="text-align: center;">
-        <a href="mailto: mail@kgkrealty.com" target="_blank" style="text-decoration: none;">
-          <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/kgkMail.png" alt="..." style="vertical-align: middle;" width="33%">
+        <a href="mailto:mail@kgkrealty.com" target="_blank" style="text-decoration: none;">
+          <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/kgkMail.png" alt="..." style="vertical-align: middle;image-rendering: -webkit-optimize-contrast;" width="33%">
         </a>
         <a href="https://www.facebook.com/kgkrealty/" target="_blank" style="text-decoration: none;">
-        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/facebook.png" alt="..." style="vertical-align: middle;" width="4%">
+        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/facebook.png" alt="..." style="vertical-align: middle;image-rendering: -webkit-optimize-contrast;" width="4%">
       </a>
         <a href="https://www.instagram.com/kgk_realty/?hl=en" target="_blank" style="text-decoration: none;">
-        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/instagram.png" alt="..." style="vertical-align: middle;" width="4%">
+        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/instagram.png" alt="..." style="vertical-align: middle;image-rendering: -webkit-optimize-contrast;" width="4%">
         </a>
         <a href="https://twitter.com/kgkrealty" target="_blank" style="text-decoration: none;">
-        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/twitter.png" alt="..." style="vertical-align: middle;" width="4%">
+        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/twitter.png" alt="..." style="vertical-align: middle;image-rendering: -webkit-optimize-contrast;" width="4%">
         </a>
         <a href="https://in.linkedin.com/company/kgk-realty" target="_blank" style="text-decoration: none;">
-        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/linkdin.png" alt="..." style="vertical-align: middle;" width="4%">
+        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/linkdin.png" alt="..." style="vertical-align: middle;image-rendering: -webkit-optimize-contrast;" width="4%">
         </a>
         <a href="https://www.kgkrealty.com/" target="_blank" style="text-decoration: none;">
-        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/kgkRealty.png" alt="..." style="vertical-align: middle;" width="16%">
+        <img src="https://kgkrealty.com/jaipurproperty/kgkMailer/kgkRealty.png" alt="..." style="vertical-align: middle;image-rendering: -webkit-optimize-contrast;" width="16%">
         </a>
   </footer>
     </div>
